[gd_scene load_steps=16 format=2]

[ext_resource path="res://scn/machine/ToolArm/toolArm.png" type="Texture" id=1]
[ext_resource path="res://scn/machine/ToolArm/screw.png" type="Texture" id=2]
[ext_resource path="res://scn/machine/ToolArm/toolCircle.png" type="Texture" id=3]
[ext_resource path="res://ToolArm.gd" type="Script" id=4]
[ext_resource path="res://scn/machine/ToolArm/toolBase.png" type="Texture" id=5]
[ext_resource path="res://scn/MovingSpaceEXITED.gd" type="Script" id=6]
[ext_resource path="res://psd/MainInterface.png" type="Texture" id=7]
[ext_resource path="res://scn/MovingSpaceENTERED.gd" type="Script" id=8]
[ext_resource path="res://scn/machine/ToolArm/toolDreieck.png" type="Texture" id=9]
[ext_resource path="res://scn/machine/ToolArm/toolViereck.png" type="Texture" id=10]
[ext_resource path="res://scn/machine/ToolArm/toolPoligon.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 56.0

[sub_resource type="CircleShape2D" id=4]
radius = 52.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.0
height = 400.281

[sub_resource type="CapsuleShape2D" id=3]
radius = 44.0
height = 56.0

[node name="ToolArm" type="Node2D"]
script = ExtResource( 4 )

[node name="MainInterface" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="Tool" type="StaticBody2D" parent="."]
position = Vector2( 551, 609 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tool"]
position = Vector2( -4, 0 )
shape = SubResource( 1 )

[node name="ToolPoligon" type="Sprite" parent="Tool"]
position = Vector2( -4, 0 )
texture = ExtResource( 11 )

[node name="ToolCircle" type="Sprite" parent="Tool"]
position = Vector2( -4, 0 )
texture = ExtResource( 3 )

[node name="ToolViereck" type="Sprite" parent="Tool"]
position = Vector2( -4, 0 )
texture = ExtResource( 10 )

[node name="ToolDreieck" type="Sprite" parent="Tool"]
position = Vector2( -4, 3.05176e-05 )
texture = ExtResource( 9 )
offset = Vector2( 2.5488, -6.95032 )

[node name="Area2D" type="Area2D" parent="Tool" groups=["Tool"]]
position = Vector2( -4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tool/Area2D"]
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 542, 609 )
node_a = NodePath("../Tool")
node_b = NodePath("../Arm1")
bias = 0.9

[node name="Arm1" type="RigidBody2D" parent="."]
position = Vector2( 752, 616 )
rotation = 1.60745
mass = 10.0
gravity_scale = 5.0
__meta__ = {
"_edit_group_": true
}

[node name="ToolArm" type="Sprite" parent="Arm1"]
position = Vector2( 1, -3 )
scale = Vector2( 1, 1.1 )
texture = ExtResource( 1 )

[node name="Screw" type="Sprite" parent="Arm1/ToolArm"]
position = Vector2( 0, 180 )
texture = ExtResource( 2 )

[node name="Screw2" type="Sprite" parent="Arm1/ToolArm"]
position = Vector2( 0, -179 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm1"]
position = Vector2( -0.109924, -2.99799 )
shape = SubResource( 2 )

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2( 956, 620 )
node_a = NodePath("../Arm1")
node_b = NodePath("../Arm2")
bias = 0.2

[node name="Arm2" type="RigidBody2D" parent="."]
position = Vector2( 955, 424 )
mass = 10.0
gravity_scale = 5.0
__meta__ = {
"_edit_group_": true
}

[node name="ToolArm" type="Sprite" parent="Arm2"]
position = Vector2( 1, -3 )
scale = Vector2( 1, 1.1 )
texture = ExtResource( 1 )

[node name="Screw" type="Sprite" parent="Arm2/ToolArm"]
position = Vector2( 0, 180 )
texture = ExtResource( 2 )

[node name="Screw2" type="Sprite" parent="Arm2/ToolArm"]
position = Vector2( 0, -179 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm2"]
shape = SubResource( 2 )

[node name="PinJoint2D3" type="PinJoint2D" parent="."]
position = Vector2( 956, 216 )
node_a = NodePath("../Arm2")
node_b = NodePath("../Base")
bias = 0.2

[node name="Base" type="StaticBody2D" parent="."]
position = Vector2( 956, 214 )

[node name="ToolBase" type="Sprite" parent="Base"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="MovingSpace" type="Area2D" parent="."]
collision_layer = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MovingSpace"]
polygon = PoolVector2Array( 461, 298, 460, 887, 954, 887, 1493, 887, 1493, 298, 1075, 298, 955, 381, 827, 298 )

[node name="NOTMovingSpace" type="Area2D" parent="."]
collision_layer = 3
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NOTMovingSpace"]
polygon = PoolVector2Array( 0, 0, 954, 1, 1920, 0, 1920, 1080, 0, 1080, 0, 0, 459, 287, 458, 890, 1496, 890, 1495, 287, 1083, 287, 954.582, 376, 820, 287, 459, 287 )

[connection signal="mouseEnteredWorkingArea" from="MovingSpace" to="." method="_on_mouseEnteredWorkingArea"]
[connection signal="mouseExitedWorkingArea" from="NOTMovingSpace" to="." method="_on_mouseExitedWorkingArea"]
